// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Forms/Input Group Focus 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde133"
    >
      Default
    </label>
    
    
    <div
      class="fd-input-group is-focus"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde133"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde134"
    >
      Error State
    </label>
    
    
    <div
      class="fd-input-group is-error is-focus"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde134"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde134ff"
    >
      Success State
    </label>
    
    
    <div
      class="fd-input-group is-success is-focus"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde134ff"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde134ss"
    >
      Warning State
    </label>
    
    
    <div
      class="fd-input-group is-warning is-focus"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde134ss"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Input With Actions 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde120"
    >
      Input with text add-on
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde120"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent"
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde121"
    >
      Input with icon action
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde121"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button"
      >
        
            
        <button
          aria-label="Navigation"
          class="fd-input-group__button fd-button fd-button--icon fd-button--transparent"
        >
          
                
          <i
            class="sap-icon--navigation-down-arrow"
          />
          
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde122"
    >
      Compact Input with icon action
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde122"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
      >
        
            
        <button
          aria-label="Navigation"
          class="fd-input-group__button fd-button fd-button--icon fd-button--transparent fd-button--compact"
        >
          
                
          <i
            class="sap-icon--navigation-down-arrow"
          />
          
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde123"
    >
      Input with text action on left
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent"
        >
          
                Button
            
        </button>
        
        
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde123"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Input With Icons 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde117"
    >
      Input with icon on the left
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--employee"
          role="presentation"
        />
        
        
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde117"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde118"
    >
      Input with icon on the right
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde118"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde119"
    >
      Input with icon on the right and right aligned input text
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input right-align"
        id="aqwsde119"
        name=""
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Sizes 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde111"
    >
      Default Size 
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde111"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910 "
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde112"
    >
      Compact Size 
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--compact"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde112"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910 "
      />
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group States 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde124"
    >
      Success
    </label>
    
    
    <div
      class="fd-input-group is-success"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde124"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde125"
    >
      Error
    </label>
    
    
    <div
      class="fd-input-group is-error"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde125"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde126"
    >
      Warning (Alert)
    </label>
    
    
    <div
      class="fd-input-group is-warning"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde126"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde127"
    >
      Information compact
    </label>
    
    
    <div
      class="fd-input-group is-information"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde127"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  


  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde127"
    >
      Error compact
    </label>
    
    
    <div
      class="fd-input-group is-error"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde127"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  


  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde127"
    >
      Warning(Alert) compact
    </label>
    
    
    <div
      class="fd-input-group is-warning"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde127"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  


  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde127"
    >
      Success compact
    </label>
    
    
    <div
      class="fd-input-group is-success"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        id="aqwsde127"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde128"
    >
      Disabled
    </label>
    
    
    <div
      class="fd-input-group is-disabled"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        disabled=""
        id="aqwsde128"
        name=""
        placeholder="Enter a value"
        type="text"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde129"
    >
      Disabled Success
    </label>
    
    
    <div
      class="fd-input-group is-success is-disabled"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        disabled=""
        id="aqwsde129"
        name=""
        type="text"
        value="1234568910"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde130"
    >
      Disabled Error
    </label>
    
    
    <div
      class="fd-input-group is-error is-disabled"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        disabled=""
        id="aqwsde130"
        name=""
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        
            
        <span
          class="sap-icon--hide"
          role="presentation"
        />
        
        
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde131"
    >
      Disabled Warning (Alert)
    </label>
    
    
    <div
      class="fd-input-group is-warning is-disabled"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        disabled=""
        id="aqwsde131"
        name=""
        type="text"
        value="1234568910"
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde132"
    >
      Disabled Information
    </label>
    
    
    <div
      class="fd-input-group is-information is-disabled"
    >
      
        
      <input
        class="fd-input fd-input--compact fd-input-group__input"
        disabled=""
        id="aqwsde132"
        name=""
        type="text"
        value="1000000"
      />
      
        
      <span
        class="fd-input-group__addon fd-input-group__addon--compact fd-input-group__addon--button"
      >
        
            
        <button
          class="fd-input-group__button fd-button fd-button--transparent fd-button--compact"
          disabled=""
        >
          
                Button
            
        </button>
        
        
      </span>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test Five 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group  is-success "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test Four 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group  "
  >
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group  "
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group  "
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group  "
  >
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group  "
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group  "
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  
        
  <h3>
    Disabled
  </h3>
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  
                
  <br />
  


  <div
    class="fd-input-group   is-disabled"
  >
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button  "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    
        
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
        
    <span
      class="fd-input-group__addon fd-input-group__addon--button "
    >
      
                    
      <button
        class="btn-playground fd-input-group__button"
      >
        Click Me
      </button>
      

        
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test One 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group  "
  >
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   km/h
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   .00
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   km/h
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   .00
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   km/h
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   .00
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   km/h
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group   is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   .00
   
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test Six 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group fd-input-group--inline  "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   phone
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder="Field placeholder text"
      value=""
    />
    

  </div>
  

  <div
    class="fd-input-group fd-input-group--inline  "
  >
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder="Field placeholder text"
      value=""
    />
    
   
    <span
      class="fd-input-group__addon "
    >
      
   fax
   
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test Three 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group  is-success "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-success  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-error  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-warning  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information "
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  is-information  is-disabled"
  >
    
   
    <span
      class="fd-input-group__addon  "
    >
      
   $
   
    </span>
    
   
    <textarea
      aria-label="test"
      class="input-group-input-playground  fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Test Two 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-input-group  "
  >
    
   
    <input
      aria-label="test"
      class="input-group-input-playground input-group-input-playground--compact fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon fd-input-group__addon--compact"
    >
      
   km/h
   
    </span>
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  fd-input-group__addon--compact"
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground input-group-input-playground--compact fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    

  </div>
  

  <br />
  

  <div
    class="fd-input-group  "
  >
    
   
    <span
      class="fd-input-group__addon  fd-input-group__addon--compact"
    >
      
   $
   
    </span>
    
   
    <input
      aria-label="test"
      class="input-group-input-playground input-group-input-playground--compact fd-input-group__input"
      placeholder=""
      value="19387309"
    />
    
   
    <span
      class="fd-input-group__addon fd-input-group__addon--compact"
    >
      
   .00
   
    </span>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Forms/Input Group Text Add On 1`] = `
<div
  dir="ltr"
>
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde113"
    >
      Left Aligned Text Add-on
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde113"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910 "
      />
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde114"
    >
      Right Aligned Text Add-on
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde114"
        name=""
        placeholder="Placeholder"
        type="text"
        value="1234568910 "
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        €
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde115"
    >
      Right Aligned Text Add-on With Right Aligned Input Text
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <input
        class="fd-input fd-input-group__input right-align"
        id="aqwsde115"
        name=""
        type="text"
        value="1234568910 "
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        €
      </span>
      
    
    </div>
    

  </div>
  

  <br />
  

  <div
    class="fd-form-item"
  >
    
    
    <label
      class="fd-form-label"
      for="aqwsde116"
    >
      Left and Right Aligned Text Add-ons
    </label>
    
    
    <div
      class="fd-input-group"
    >
      
        
      <span
        class="fd-input-group__addon"
      >
        $
      </span>
      
        
      <input
        class="fd-input fd-input-group__input"
        id="aqwsde116"
        name=""
        placeholder="Placeholder"
        type="text"
        value="This is a test"
      />
      
        
      <span
        class="fd-input-group__addon"
      >
        .00
      </span>
      
    
    </div>
    

  </div>
  

</div>
`;
